pkg/test/datasets/validation/dataset/security-v1-AuthorizationPolicy-invalid.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: invalid-authorization-policy
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/sleep"]
    to:
    - operation:
        methods: ["GET"]
    when:
    - values: ["key is missing"]
